syntax = "proto3";

option go_package = "github.com/openline-ai/openline-customer-os/packages/server/events-processing-proto/gen/proto/go/api/grpc/v1/common";
//option go_package = "api/grpc/v1/common";

enum BilledType {
  NONE_BILLED = 0;
  MONTHLY_BILLED = 1;
  ANNUALLY_BILLED = 2;
  ONCE_BILLED = 3; // For One-Time
  USAGE_BILLED = 4; // For Usage
  QUARTERLY_BILLED = 5;
}